--- a/source/main.html
+++ b/source/main.html
@@ -155,13 +155,13 @@
                 media="(max-width: 1023px)">
               <source type="image/webp"
                 srcset="img/products/purple-gemstone-necklace_large.webp 1x, img/products/purple-gemstone-necklace_large@2x.webp 2x">
-              <!--img size (max-width 767px): 1x(width: 130px, hight: 136px), 2x(width: 260px, hight: 272px-->
+              <!--img size (max-width 767px): 1x(width: 130px, hight: 136px), 2x(width: 260px, hight: 272px)-->
               <source media="(max-width: 767px)"
                 srcset="img/products/purple-gemstone-necklace_small.jpg 1x, img/products/purple-gemstone-necklace_small@2x.jpg 2x">
-              <!--img size (max-width 1023px): 1x(width: 324px, hight: 340px), 2x(width: 648px, hight: 680px-->
+              <!--img size (max-width 1023px): 1x(width: 324px, hight: 340px), 2x(width: 648px, hight: 680px)-->
               <source media="(max-width: 1023px)"
                 srcset="img/products/purple-gemstone-necklace_medium.jpg 1x, img/products/purple-gemstone-necklace_medium@2x.jpg 2x">
-              <!--img size (min-width 1024px): 1x(width: 270px, hight: 284px 2x(width: 540px, hight: 568px-->
+              <!--img size (min-width 1024px): 1x(width: 270px, hight: 284px 2x(width: 540px, hight: 568px)-->
               <img src="img/products/purple-gemstone-necklace_large.jpg"
                 srcset="img/products/purple-gemstone-necklace_large@2x.jpg 2x" width="270" height="284"
                 alt="Product image from the catalog">
@@ -185,13 +185,13 @@
                 media="(max-width: 1023px)">
               <source type="image/webp"
                 srcset="img/products/layered-choker-necklace_large.webp 1x, img/products/layered-choker-necklace_large@2x.webp 2x">
-              <!--img size (max-width 767px): 1x(width: 130px, hight: 136px), 2x(width: 260px, hight: 272px-->
+              <!--img size (max-width 767px): 1x(width: 130px, hight: 136px), 2x(width: 260px, hight: 272px)-->
               <source media="(max-width: 767px)"
                 srcset="img/products/layered-choker-necklace_small.jpg 1x, img/products/layered-choker-necklace_small@2x.jpg 2x">
-              <!--img size (max-width 1023px): 1x(width: 324px, hight: 340px), 2x(width: 648px, hight: 680px-->
+              <!--img size (max-width 1023px): 1x(width: 324px, hight: 340px), 2x(width: 648px, hight: 680px)-->
               <source media="(max-width: 1023px)"
                 srcset="img/products/layered-choker-necklace_medium.jpg 1x, img/products/layered-choker-necklace_medium@2x.jpg 2x">
-              <!--img size (min-width 1024px): 1x(width: 270px, hight: 284px 2x(width: 540px, hight: 568px-->
+              <!--img size (min-width 1024px): 1x(width: 270px, hight: 284px 2x(width: 540px, hight: 568px)-->
               <img src="img/products/layered-choker-necklace_large.jpg"
                 srcset="img/products/layered-choker-necklace_large@2x.jpg 2x" width="270" height="284"
                 alt="Product image from the catalog">
@@ -215,13 +215,13 @@
                 media="(max-width: 1023px)">
               <source type="image/webp"
                 srcset="img/products/dainty-gold-necklace_large.webp 1x, img/products/dainty-gold-necklace_large@2x.webp 2x">
-              <!--img size (max-width 767px): 1x(width: 130px, hight: 136px), 2x(width: 260px, hight: 272px-->
+              <!--img size (max-width 767px): 1x(width: 130px, hight: 136px), 2x(width: 260px, hight: 272px)-->
               <source media="(max-width: 767px)"
                 srcset="img/products/dainty-gold-necklace_small.jpg 1x, img/products/dainty-gold-necklace_small@2x.jpg 2x">
-              <!--img size (max-width 1023px): 1x(width: 324px, hight: 340px), 2x(width: 648px, hight: 680px-->
+              <!--img size (max-width 1023px): 1x(width: 324px, hight: 340px), 2x(width: 648px, hight: 680px)-->
               <source media="(max-width: 1023px)"
                 srcset="img/products/dainty-gold-necklace_medium.jpg 1x, img/products/dainty-gold-necklace_medium@2x.jpg 2x">
-              <!--img size (min-width 1024px): 1x(width: 270px, hight: 284px 2x(width: 540px, hight: 568px-->
+              <!--img size (min-width 1024px): 1x(width: 270px, hight: 284px 2x(width: 540px, hight: 568px)-->
               <img src="img/products/dainty-gold-necklace_large.jpg"
                 srcset="img/products/dainty-gold-necklace_large@2x.jpg 2x" width="270" height="284"
                 alt="Product image from the catalog">
@@ -245,13 +245,13 @@
                 media="(max-width: 1023px)">
               <source type="image/webp"
                 srcset="img/products/galaxy-earrings_large.webp 1x, img/products/galaxy-earrings_large@2x.webp 2x">
-              <!--img size (max-width 767px): 1x(width: 130px, hight: 136px), 2x(width: 260px, hight: 272px-->
+              <!--img size (max-width 767px): 1x(width: 130px, hight: 136px), 2x(width: 260px, hight: 272px)-->
               <source media="(max-width: 767px)"
                 srcset="img/products/galaxy-earrings_small.jpg 1x, img/products/galaxy-earrings_small@2x.jpg 2x">
-              <!--img size (max-width 1023px): 1x(width: 324px, hight: 340px), 2x(width: 648px, hight: 680px-->
+              <!--img size (max-width 1023px): 1x(width: 324px, hight: 340px), 2x(width: 648px, hight: 680px)-->
               <source media="(max-width: 1023px)"
                 srcset="img/products/galaxy-earrings_medium.jpg 1x, img/products/galaxy-earrings_medium@2x.jpg 2x">
-              <!--img size (min-width 1024px): 1x(width: 270px, hight: 284px 2x(width: 540px, hight: 568px-->
+              <!--img size (min-width 1024px): 1x(width: 270px, hight: 284px 2x(width: 540px, hight: 568px)-->
               <img src="img/products/galaxy-earrings_large.jpg" srcset="img/products/galaxy-earrings_large@2x.jpg 2x"
                 width="270" height="284" alt="Product image from the catalog">
             </picture>
@@ -274,13 +274,13 @@
                 media="(max-width: 1023px)">
               <source type="image/webp"
                 srcset="img/products/double-pearl-earrings_large.webp 1x, img/products/double-pearl-earrings_large@2x.webp 2x">
-              <!--img size (max-width 767px): 1x(width: 130px, hight: 136px), 2x(width: 260px, hight: 272px-->
+              <!--img size (max-width 767px): 1x(width: 130px, hight: 136px), 2x(width: 260px, hight: 272px)-->
               <source media="(max-width: 767px)"
                 srcset="img/products/double-pearl-earrings_small.jpg 1x, img/products/double-pearl-earrings_small@2x.jpg 2x">
-              <!--img size (max-width 1023px): 1x(width: 324px, hight: 340px), 2x(width: 648px, hight: 680px-->
+              <!--img size (max-width 1023px): 1x(width: 324px, hight: 340px), 2x(width: 648px, hight: 680px)-->
               <source media="(max-width: 1023px)"
                 srcset="img/products/double-pearl-earrings_medium.jpg 1x, img/products/double-pearl-earrings_medium@2x.jpg 2x">
-              <!--img size (min-width 1024px): 1x(width: 270px, hight: 284px 2x(width: 540px, hight: 568px-->
+              <!--img size (min-width 1024px): 1x(width: 270px, hight: 284px 2x(width: 540px, hight: 568px)-->
               <img src="img/products/double-pearl-earrings_large.jpg"
                 srcset="img/products/double-pearl-earrings_large@2x.jpg 2x" width="270" height="284"
                 alt="Product image from the catalog">
@@ -304,13 +304,13 @@
                 media="(max-width: 1023px)">
               <source type="image/webp"
                 srcset="img/products/black-choker-gold-bead_large.webp 1x, img/products/black-choker-gold-bead_large@2x.webp 2x">
-              <!--img size (max-width 767px): 1x(width: 130px, hight: 136px), 2x(width: 260px, hight: 272px-->
+              <!--img size (max-width 767px): 1x(width: 130px, hight: 136px), 2x(width: 260px, hight: 272px)-->
               <source media="(max-width: 767px)"
                 srcset="img/products/black-choker-gold-bead_small.jpg 1x, img/products/black-choker-gold-bead_small@2x.jpg 2x">
-              <!--img size (max-width 1023px): 1x(width: 324px, hight: 340px), 2x(width: 648px, hight: 680px-->
+              <!--img size (max-width 1023px): 1x(width: 324px, hight: 340px), 2x(width: 648px, hight: 680px)-->
               <source media="(max-width: 1023px)"
                 srcset="img/products/black-choker-gold-bead_medium.jpg 1x, img/products/black-choker-gold-bead_medium@2x.jpg 2x">
-              <!--img size (min-width 1024px): 1x(width: 270px, hight: 284px 2x(width: 540px, hight: 568px-->
+              <!--img size (min-width 1024px): 1x(width: 270px, hight: 284px 2x(width: 540px, hight: 568px)-->
               <img src="img/products/black-choker-gold-bead_large.jpg"
                 srcset="img/products/black-choker-gold-bead_large@2x.jpg 2x" width="270" height="284"
                 alt="Product image from the catalog">
@@ -334,13 +334,13 @@
                 media="(max-width: 1023px)">
               <source type="image/webp"
                 srcset="img/products/gold-layered-necklace_large.webp 1x, img/products/gold-layered-necklace_large@2x.webp 2x">
-              <!--img size (max-width 767px): 1x(width: 130px, hight: 136px), 2x(width: 260px, hight: 272px-->
+              <!--img size (max-width 767px): 1x(width: 130px, hight: 136px), 2x(width: 260px, hight: 272px)-->
               <source media="(max-width: 767px)"
                 srcset="img/products/gold-layered-necklace_small.jpg 1x, img/products/gold-layered-necklace_small@2x.jpg 2x">
-              <!--img size (max-width 1023px): 1x(width: 324px, hight: 340px), 2x(width: 648px, hight: 680px-->
+              <!--img size (max-width 1023px): 1x(width: 324px, hight: 340px), 2x(width: 648px, hight: 680px)-->
               <source media="(max-width: 1023px)"
                 srcset="img/products/gold-layered-necklace_medium.jpg 1x, img/products/gold-layered-necklace_medium@2x.jpg 2x">
-              <!--img size (min-width 1024px): 1x(width: 270px, hight: 284px 2x(width: 540px, hight: 568px-->
+              <!--img size (min-width 1024px): 1x(width: 270px, hight: 284px 2x(width: 540px, hight: 568px)-->
               <img src="img/products/gold-layered-necklace_large.jpg"
                 srcset="img/products/gold-layered-necklace_large@2x.jpg 2x" width="270" height="284"
                 alt="Product image from the catalog">
@@ -364,13 +364,13 @@
                 media="(max-width: 1023px)">
               <source type="image/webp"
                 srcset="img/products/blue-gemstone-pendant_large.webp 1x, img/products/blue-gemstone-pendant_large@2x.webp 2x">
-              <!--img size (max-width 767px): 1x(width: 130px, hight: 136px), 2x(width: 260px, hight: 272px-->
+              <!--img size (max-width 767px): 1x(width: 130px, hight: 136px), 2x(width: 260px, hight: 272px)-->
               <source media="(max-width: 767px)"
                 srcset="img/products/blue-gemstone-pendant_small.jpg 1x, img/products/blue-gemstone-pendant_small@2x.jpg 2x">
-              <!--img size (max-width 1023px): 1x(width: 324px, hight: 340px), 2x(width: 648px, hight: 680px-->
+              <!--img size (max-width 1023px): 1x(width: 324px, hight: 340px), 2x(width: 648px, hight: 680px)-->
               <source media="(max-width: 1023px)"
                 srcset="img/products/blue-gemstone-pendant_medium.jpg 1x, img/products/blue-gemstone-pendant_medium@2x.jpg 2x">
-              <!--img size (min-width 1024px): 1x(width: 270px, hight: 284px 2x(width: 540px, hight: 568px-->
+              <!--img size (min-width 1024px): 1x(width: 270px, hight: 284px 2x(width: 540px, hight: 568px)-->
               <img src="img/products/blue-gemstone-pendant_large.jpg"
                 srcset="img/products/blue-gemstone-pendant_large@2x.jpg 2x" width="270" height="284"
                 alt="Product image from the catalog">
@@ -394,13 +394,13 @@
                 media="(max-width: 1023px)">
               <source type="image/webp"
                 srcset="img/products/boho-earrings_large.webp 1x, img/products/boho-earrings_large@2x.webp 2x">
-              <!--img size (max-width 767px): 1x(width: 130px, hight: 136px), 2x(width: 260px, hight: 272px-->
+              <!--img size (max-width 767px): 1x(width: 130px, hight: 136px), 2x(width: 260px, hight: 272px)-->
               <source media="(max-width: 767px)"
                 srcset="img/products/boho-earrings_small.jpg 1x, img/products/boho-earrings_small@2x.jpg 2x">
-              <!--img size (max-width 1023px): 1x(width: 324px, hight: 340px), 2x(width: 648px, hight: 680px-->
+              <!--img size (max-width 1023px): 1x(width: 324px, hight: 340px), 2x(width: 648px, hight: 680px)-->
               <source media="(max-width: 1023px)"
                 srcset="img/products/boho-earrings_medium.jpg 1x, img/products/boho-earrings_medium@2x.jpg 2x">
-              <!--img size (min-width 1024px): 1x(width: 270px, hight: 284px 2x(width: 540px, hight: 568px-->
+              <!--img size (min-width 1024px): 1x(width: 270px, hight: 284px 2x(width: 540px, hight: 568px)-->
               <img src="img/products/boho-earrings_large.jpg" srcset="img/products/boho-earrings_large@2x.jpg 2x"
                 width="270" height="284" alt="Product image from the catalog">
             </picture>
@@ -423,13 +423,13 @@
                 media="(max-width: 1023px)">
               <source type="image/webp"
                 srcset="img/products/bird-necklace_large.webp 1x, img/products/bird-necklace_large@2x.webp 2x">
-              <!--img size (max-width 767px): 1x(width: 130px, hight: 136px), 2x(width: 260px, hight: 272px-->
+              <!--img size (max-width 767px): 1x(width: 130px, hight: 136px), 2x(width: 260px, hight: 272px)-->
               <source media="(max-width: 767px)"
                 srcset="img/products/bird-necklace_small.jpg 1x, img/products/bird-necklace_small@2x.jpg 2x">
-              <!--img size (max-width 1023px): 1x(width: 324px, hight: 340px), 2x(width: 648px, hight: 680px-->
+              <!--img size (max-width 1023px): 1x(width: 324px, hight: 340px), 2x(width: 648px, hight: 680px)-->
               <source media="(max-width: 1023px)"
                 srcset="img/products/bird-necklace_medium.jpg 1x, img/products/bird-necklace_medium@2x.jpg 2x">
-              <!--img size (min-width 1024px): 1x(width: 270px, hight: 284px 2x(width: 540px, hight: 568px-->
+              <!--img size (min-width 1024px): 1x(width: 270px, hight: 284px 2x(width: 540px, hight: 568px)-->
               <img src="img/products/bird-necklace_large.jpg" srcset="img/products/bird-necklace_large@2x.jpg 2x"
                 width="270" height="284" alt="Product image from the catalog">
             </picture>
@@ -452,13 +452,13 @@
                 media="(max-width: 1023px)">
               <source type="image/webp"
                 srcset="img/products/black-leather-choker-necklace_large.webp 1x, img/products/black-leather-choker-necklace_large@2x.webp 2x">
-              <!--img size (max-width 767px): 1x(width: 130px, hight: 136px), 2x(width: 260px, hight: 272px-->
+              <!--img size (max-width 767px): 1x(width: 130px, hight: 136px), 2x(width: 260px, hight: 272px)-->
               <source media="(max-width: 767px)"
                 srcset="img/products/black-leather-choker-necklace_small.jpg 1x, img/products/black-leather-choker-necklace_small@2x.jpg 2x">
-              <!--img size (max-width 1023px): 1x(width: 324px, hight: 340px), 2x(width: 648px, hight: 680px-->
+              <!--img size (max-width 1023px): 1x(width: 324px, hight: 340px), 2x(width: 648px, hight: 680px)-->
               <source media="(max-width: 1023px)"
                 srcset="img/products/black-leather-choker-necklace_medium.jpg 1x, img/products/black-leather-choker-necklace_medium@2x.jpg 2x">
-              <!--img size (min-width 1024px): 1x(width: 270px, hight: 284px 2x(width: 540px, hight: 568px-->
+              <!--img size (min-width 1024px): 1x(width: 270px, hight: 284px 2x(width: 540px, hight: 568px)-->
               <img src="img/products/black-leather-choker-necklace_large.jpg"
                 srcset="img/products/black-leather-choker-necklace_large@2x.jpg 2x" width="270" height="284"
                 alt="Product image from the catalog">
@@ -482,13 +482,13 @@
                 media="(max-width: 1023px)">
               <source type="image/webp"
                 srcset="img/products/elephant-earrings_large.webp 1x, img/products/elephant-earrings_large@2x.webp 2x">
-              <!--img size (max-width 767px): 1x(width: 130px, hight: 136px), 2x(width: 260px, hight: 272px-->
+              <!--img size (max-width 767px): 1x(width: 130px, hight: 136px), 2x(width: 260px, hight: 272px)-->
               <source media="(max-width: 767px)"
                 srcset="img/products/elephant-earrings_small.jpg 1x, img/products/elephant-earrings_small@2x.jpg 2x">
-              <!--img size (max-width 1023px): 1x(width: 324px, hight: 340px), 2x(width: 648px, hight: 680px-->
+              <!--img size (max-width 1023px): 1x(width: 324px, hight: 340px), 2x(width: 648px, hight: 680px)-->
               <source media="(max-width: 1023px)"
                 srcset="img/products/elephant-earrings_medium.jpg 1x, img/products/elephant-earrings_medium@2x.jpg 2x">
-              <!--img size (min-width 1024px): 1x(width: 270px, hight: 284px 2x(width: 540px, hight: 568px-->
+              <!--img size (min-width 1024px): 1x(width: 270px, hight: 284px 2x(width: 540px, hight: 568px)-->
               <img src="img/products/elephant-earrings_large.jpg"
                 srcset="img/products/elephant-earrings_large@2x.jpg 2x" width="270" height="284"
                 alt="Product image from the catalog">
